<resources>
    <string name="app_name">QuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Hint_show_name">Will show your name here</string>
    <string name="Hangman_text">Hangman</string>
    <string name="Quiz_text">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="play_button">Play!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextLost">You Lost</string>
    <string name="TextWin">You Win</string>
    <string name="Name">Matthew Daniel Surupati</string>
    <string name="NIM">202000673</string>
    <string name="count_label">Q%d</string>
    <string name="result_title">Result</string>
    <string name="result_score">%d / 10</string>
    <string name="btn_try_again">Try Again </string>
</resources>