<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".chooseGame"
    android:id="@+id/fragment_choose">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!!"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/ViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Hint_show_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <Button
        android:id="@+id/Quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ViewName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/Quiz_text"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.25"
        />

    <Button
        android:id="@+id/Hangman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/Quiz"
        android:text="@string/Hangman_text"
        app:layout_constraintVertical_bias="0.1"
        />

    <Button
        android:id="@+id/Abouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Quiz"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="about"
        app:layout_constraintVertical_bias="0.2"
        />

<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ViewName"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/Buttons"-->
<!--        android:gravity="center_horizontal">-->
<!--        <Button-->
<!--            android:layout_margin="1dp"-->
<!--            android:id="@+id/Quiz"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/Quiz_text"-->
<!--            />-->
<!--        <Button-->
<!--            android:layout_margin="1dp"-->
<!--            android:id="@+id/Hangman"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/Hangman_text"-->
<!--            />-->
<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>