<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Hangman">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/Hangman_text"
        android:textSize="46sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/LostText"
        app:layout_constraintTop_toBottomOf="@id/lettersUsedTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/TextLost"
        />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LetterLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="Next"
        />

    <TextView
        android:id="@+id/TextWin"
        app:layout_constraintTop_toBottomOf="@id/lettersUsedTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:text="@string/TextWin"
        tools:visibility="visible"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WordView"
        android:letterSpacing="0.1"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title"
        app:layout_constraintVertical_bias="0.1"
        android:textSize="28sp"
        tools:text="_ _ ABCD_ _ _ _ _ _ _"
        />

    <TextView
        android:id="@+id/lettersUsedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:text="Used Letters: A, B, C, D, E, F, G" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="2dp"
        android:id="@+id/LetterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/WordView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.15"
        >

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/wordTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:constraint_referenced_ids="a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z"
            app:flow_wrapMode="aligned"
            app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="B"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="C"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="D"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="E"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="F"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="G"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="H"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="I"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="J"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="K"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="L"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="M"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="N"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="O"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="P"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="Q"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="R"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="S"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="T"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="U"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="V"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="W"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="X"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="Y"
                android:textColor="@color/white"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:paddingHorizontal="10dp"
                android:text="Z"
                android:textColor="@color/white"
                android:textSize="24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>